--- a/views/about_us.hbs
+++ b/views/about_us.hbs
@@ -60,13 +60,14 @@
             	<p style="text-align: center"class="text">handlebars: 4.7.3</p>
             	<p style="text-align: center"class="text">moment: 2.24.0</p>
             	<p style="text-align: center"class="text">mongodb: 3.5.5</p>
+                
 
             </div>
 
             <div class="col-md-4">
+                <p style="text-align: center"class="text">mongo-sanitize: 1.1.0</p>
             	<p style="text-align: center"class="text">mongoose: 5.9.6</p>
             	<p style="text-align: center"class="text">multer: 1.4.2</p>
-            	<p style="text-align: center"class="text">nodemon: 2.0.2</p>
             </div>
       	</div>
 
