--- a/views/about_us.hbs
+++ b/views/about_us.hbs
@@ -50,6 +50,7 @@
 
       	<div class="row">
       		<div class="col-md-4">
+                  <p style="text-align: center"class="text">aws-sdk: 2.656.0</p>
       			<p style="text-align: center"class="text">body-parser: 1.19.0</p>
             	<p style="text-align: center"class="text">cookie-parser: 1.4.5</p>
             	<p style="text-align: center"class="text">express: 4.17.1</p>
@@ -68,6 +69,7 @@
                 <p style="text-align: center"class="text">mongo-sanitize: 1.1.0</p>
             	<p style="text-align: center"class="text">mongoose: 5.9.6</p>
             	<p style="text-align: center"class="text">multer: 1.4.2</p>
+                <p style="text-align: center"class="text">multer-s3: 2.9.0</p>
             </div>
       	</div>
 
