--- a/views/about_us.hbs
+++ b/views/about_us.hbs
@@ -73,15 +73,16 @@
             	<p style="text-align: center"class="text">handlebars: 4.7.3</p>
             	<p style="text-align: center"class="text">moment: 2.24.0</p>
             	<p style="text-align: center"class="text">mongodb: 3.5.5</p>
+                <p style="text-align: center"class="text">mongo-sanitize: 1.1.0</p>
                 
 
             </div>
 
             <div class="col-md-4">
-                <p style="text-align: center"class="text">mongo-sanitize: 1.1.0</p>
             	<p style="text-align: center"class="text">mongoose: 5.9.6</p>
             	<p style="text-align: center"class="text">multer: 1.4.2</p>
                 <p style="text-align: center"class="text">multer-s3: 2.9.0</p>
+                <p style="text-align: center"class="text">path: 0.12.7</p>
             </div>
       	</div>
 
