--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,32 +1,260 @@
-{{> header}}
-<style>
-    body{
-        background-image: url('img/windmill1.jpg'); 
-        background-size: 100% 100%; 
-        background-repeat: no-repeat;
-        background-attachment: fixed;
-    }
-</style>
-<div class="login-container">
-    <img src="img/egg.png" class="display-pic">
-    <header>
-        <h1 class="center-block text-center"><b>{{title}}</b></h1>
-    </header>
-    <form method="POST" autocomplete="off">
-        <p>Username</p>
-        <input type="text" id="username" placeholder="Enter username" required="true" name="username">
-        <br>
-        <br>
-        <p>Password</p>
-        <input type="password" id="pw" placeholder="Enter password" required="true" name="password">
-        <br>
-        <center><p style="color: rgb(255, 94, 0);">&nbsp;{{message}}&nbsp;</p></center>
-        <br>
-        <div class="col-md-12 text-center">
-            <button type="submit" class="btn btn-success center-block text-center" role="button" style="width: 150px;">Login</button>
-            <br>
-            <a href="registration">Don't have an account?</a>
-        </div>
 
-    </form>
-</div>
+<html>
+	<head>
+		<Title> {{title}} </Title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link rel = "stylesheet" type = "text/css" href = "style.css">
+
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+
+		<!-- jQuery library -->
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
+		<!-- Latest compiled JavaScript -->
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+
+		<style>
+			:root {
+			  --form-height: 550px;
+			  --form-width: 900px;
+			  --left-color: #FFA4A4;
+			  --right-color: #96dbe2;
+			}
+
+			.regcontainer {
+			  width: var(--form-width);
+			  height: var(--form-height);
+			  position: relative;
+			  margin: auto;
+			  box-shadow: 2px 10px 40px rgba(22, 20, 19, 0.4);
+			  border-radius: 10px;
+			  margin-top: 50px;
+			  margin-bottom: 50px;
+			  padding:0px;
+			}
+			/*
+			----------------------
+			      Overlay
+			----------------------
+			*/
+			.overlay {
+			  width: 100%;
+			  height: 100%;
+			  position: absolute;
+			  z-index: 100;
+			  background-image: linear-gradient(
+			    to left,
+			    var(--left-color),
+			    var(--right-color)
+			  );
+			  border-radius: 10px;
+			  color: white;
+			  clip: rect(0, 450px, var(--form-height), 0);
+			}
+
+			.open-sign-up {
+			  animation: slideleft 1s linear forwards;
+			}
+
+			.open-sign-in {
+			  animation: slideright 1s linear forwards;
+			}
+
+			.overlay .sign-in,
+			.overlay .sign-up {
+			  /*  Width is 385px - padding  */
+			  --padding: 0px;
+			  width: calc(450px - var(--padding) * 2);
+			  height: 100%;
+			  display: flex;
+			  justify-content: center;
+			  flex-direction: column;
+			  align-items: center;
+			  padding: 0px var(--padding);
+			  text-align: center;
+			}
+
+			.overlay .sign-up {
+			  float: left;
+			}
+
+			.overlay h1 {
+			  margin: 0px 5px;
+			  font-size: 2.1rem;
+			}
+
+			.overlay p {
+			  margin: 20px 0px 30px;
+			  font-weight: 200;
+			}
+			/*
+			------------------------
+			      Buttons
+			------------------------
+			*/
+			.switch-button,
+			.control-button {
+			  display: block;
+			  margin-left: auto;
+			  margin-right: auto;
+			  width: 140px;
+			  height: 40px;
+			  font-size: 14px;
+			  text-transform: uppercase;
+			  background: none;
+			  border-radius: 20px;
+			  color: white;
+			}
+
+			.switch-button {
+			  border: 2px solid;
+			}
+
+			.control-button {
+			  border: none;
+			  margin-top: 15px;
+			}
+
+			.switch-button:focus,
+			.control-button:focus {
+			  outline: none;
+			}
+
+			.control-button.up {
+			  background-color: var(--left-color);
+			}
+
+			.control-button.in {
+			  background-color: var(--right-color);
+			}
+
+			/*
+			--------------------------
+			      Forms
+			--------------------------
+			*/
+			.form {
+			  width: 100%;
+			  height: 100%;
+			  position: absolute;
+			  border-radius: 10px;
+			}
+
+			.form .sign-in,
+			.form .sign-up {
+			  --padding: 0px;
+			  position: absolute;
+			  /*  Width is 100% - 385px - padding  */
+			  width: calc(var(--form-width) - 450px - var(--padding) * 2);
+			  height: 100%;
+			  display: flex;
+			  justify-content: center;
+			  flex-direction: column;
+			  align-items: center;
+			  padding: 0px var(--padding);
+			  text-align: center;
+			}
+
+			.form .sign-in {
+			  right: 0;
+			}
+
+			.form .sign-in h1 {
+			  color: var(--right-color);
+			  margin: 0;
+			}
+
+			#sign-in-form input,
+			#sign-up-form input {
+			  margin: 10px;
+			  font-size: 14px;
+			  padding: 10px;
+			  width: 300px;
+			  font-weight: 300;
+			  border: none;
+			  background-color: #e4e4e494;
+			  font-family: "Helvetica Neue", sans-serif;
+			  letter-spacing: 1.5px;
+			  padding-left: 20px;
+			}
+
+			#sign-in-form input::placeholder {
+			  letter-spacing: 1px;
+			}
+
+			.carousel-inner img {
+				margin: auto;
+			}
+		</style>
+	</head>
+
+<body style= "background-color: white; font-color: black; font-family: Helvetica Neue, sans-serif; letter-spacing: 1.5px; font-weight: 500;">
+		<header class = "header" style = "font-color: black; font-weight: 500; font-family: Helvetica Neue, sans-serif;">
+
+			<div id="myCarousel" class="carousel slide" data-ride="carousel" style="margin-top:50px;">
+				<!-- Indicators -->
+				<ol class="carousel-indicators">
+				    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+				    <li data-target="#myCarousel" data-slide-to="1"></li>
+				    <li data-target="#myCarousel" data-slide-to="2"></li>
+				    <li data-target="#myCarousel" data-slide-to="3"></li>
+				</ol>
+
+			    <!-- Wrapper for slides -->
+				<div class="carousel-inner">
+				    <div class="item active ">
+				      	<img src="slider1.png" alt="slider1">
+				    </div>
+
+				    <div class="item">
+				      	<img src="slider2.png" alt="slider2">
+				    </div>
+
+				    <div class="item">
+				      	<img src="slider3.png" alt="slider3">
+				    </div>
+
+				    <div class="item">
+				      	<img src="slider4.png" alt="slider4">
+				    </div>
+				</div>
+
+				<!-- Left and right controls -->
+				<a class="left carousel-control" href="#myCarousel" data-slide="prev">
+					<span class="glyphicon glyphicon-chevron-left"></span>
+					<span class="sr-only">Previous</span>
+				</a>
+				<a class="right carousel-control" href="#myCarousel" data-slide="next">
+				    <span class="glyphicon glyphicon-chevron-right"></span>
+				    <span class="sr-only">Next</span>
+				</a>
+			</div>
+
+			<div class="regcontainer">
+		        <div class="overlay" id="overlay">
+			        <div class="sign-up" id="sign-up">
+			        	<a href="homepage"><img src = "logo.png"></a><hr>
+			            <h1> Don't have an account yet? </h1>
+			            <p> Enter your personal details and start a journey with us! </p>
+			            <a href="signup"><button class="switch-button" id="slide-left-button"> Sign Up </button></a>
+			        </div>
+		        </div>
+
+		        <div class="form">
+		            <div class="sign-in" id="sign-in-info">
+		            	<h1> Sign In </h1>
+		            	<form id="sign-in-form" method = "POST" action = "/login">
+		              		<input type="email" id="email" name = "email" placeholder="Email" required/>
+		              		<input type="password" id="password" placeholder="Password" name = "password" required/>
+		              		<button class="control-button in" type="submit" name="signin" id="signin"> Sign In </button>
+		            	</form>
+						<br><br>
+						<div class="alert alert-danger" style="width: 300px;" {{hidden}}>
+							<strong>Oh no!</strong> Username or Password may be incorrect.
+						</div>
+		          	</div>
+				</div>
+			</div>
+		</header>
+	</body>
+</html>
